--- a/ngClientDev/src/index.html
+++ b/ngClientDev/src/index.html
@@ -9,6 +9,10 @@
     <link rel="manifest" href="/assets/manifest.json">
   </head>
   <body>
-    <app-root></app-root>
+    <section class="blue-violet-pink-theme" id="app">
+      <app-root>
+        <app-spinner></app-spinner>
+      </app-root>
+    </section>
   </body>
 </html>
